# moon

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.md  build.py  build.sh  check.py  test.py  test.sh
.github/workflows/: cmake.yml  linux.yml  windows.yml
benchmark/: CMakeLists.txt
benchmark/src/: basic.benchmark.cpp
cmake/: CopyLUA.cmake
docs/: CMakeLists.txt  Doxyfile.in
include/: binding.h  luaclass.h  marshalling.h  moon.h  types.h
include/moon/: core.h  invokable.h  logger.h  lookupproxy.h  moon.h  object.h  reference.h  script.h  stack.h  stateview.h  traits.h  types.h  usertype.h
lua/: CMakeLists.txt  LICENSE
lua-5.4.1/: CMakeLists.txt  README.md
platform-scripts/linux/: build.sh  check.sh  test.sh
platform-scripts/windows/: build.bat  test.bat
src/: moon.cpp
test/: .gitignore  CMakeLists.txt  basic.cpp  functions.cpp  main.cpp  moontypes.cpp  object.cpp  scripting.cpp  scripting.h  stackguard.h  test.cpp  tests.cpp  tests.h
test/assets/scripts/: databuffer.lua  luafunctions.lua  luavariables.lua
test/benchmark/: basic.benchmark.cpp
test/cmake/: CodeCoverage.cmake  CopyLUA.cmake
test/include/: helpers.h  stackguard.h  userdefinedtype.h
test/scripts/: cppclass.lua  cppfunctions.lua  luafunctions.lua  passed.lua
test/src/: basic.cpp  basic.test.cpp  functions.cpp  functions.test.cpp  globals.test.cpp  moontypes.cpp  object.cpp  object.test.cpp  script.test.cpp  userdefinedtype.cpp  usertype.cpp  usertype.test.cpp  view.test.cpp
